{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 439,
  "lineage": "c3a41647-33c9-0afc-bb2f-ce83725be69c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:internet-gateway/igw-0a82e10ed7246dc69",
            "id": "igw-0a82e10ed7246dc69",
            "owner_id": "780067648615",
            "tags": {
              "Name": "jaks-internet-gateway"
            },
            "tags_all": {
              "Name": "jaks-internet-gateway"
            },
            "vpc_id": "vpc-001e43fceb604f62c"
          },
          "dependencies": [
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:780067648615:loadbalancer/app/jakshylyk-alb/2267eb74f027f959",
            "arn_suffix": "app/jakshylyk-alb/2267eb74f027f959",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jakshylyk-alb-22498655.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:780067648615:loadbalancer/app/jakshylyk-alb/2267eb74f027f959",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jakshylyk-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-031fe9f0d898399f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0243ab7e1fcbed796"
              },
              {
                "subnet_id": "subnet-033e37347fcceb48f"
              },
              {
                "subnet_id": "subnet-08fcc8b383f85baf3"
              }
            ],
            "subnets": [
              "subnet-0243ab7e1fcbed796",
              "subnet-033e37347fcceb48f",
              "subnet-08fcc8b383f85baf3"
            ],
            "vpc_id": "vpc-001e43fceb604f62c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.js-sg",
            "aws_subnet.pub1",
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listens",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:780067648615:listener/app/jakshylyk-alb/2267eb74f027f959/d777e22aa78391de",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:780067648615:targetgroup/jakshylyk-target/4f9f3cc032e06652",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:780067648615:listener/app/jakshylyk-alb/2267eb74f027f959/d777e22aa78391de",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:780067648615:loadbalancer/app/jakshylyk-alb/2267eb74f027f959",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.alb-target",
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:780067648615:targetgroup/jakshylyk-target/4f9f3cc032e06652",
            "arn_suffix": "targetgroup/jakshylyk-target/4f9f3cc032e06652",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:780067648615:targetgroup/jakshylyk-target/4f9f3cc032e06652",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jakshylyk-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-001e43fceb604f62c"
          },
          "dependencies": [
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:network-interface/eni-01ca81c6c1e491c99",
            "id": "eni-01ca81c6c1e491c99",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:8c:67:b5:0a:25",
            "owner_id": "780067648615",
            "private_ip": "10.1.0.42",
            "private_ip_list": [
              "10.1.0.42"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.0.42"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-031fe9f0d898399f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08fcc8b383f85baf3"
          },
          "dependencies": [
            "aws_security_group.js-sg",
            "aws_subnet.pub1",
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:route-table/rtb-030fc5d649f9239ed",
            "id": "rtb-030fc5d649f9239ed",
            "owner_id": "780067648615",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a82e10ed7246dc69",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route0"
            },
            "tags_all": {
              "Name": "route0"
            },
            "timeouts": null,
            "vpc_id": "vpc-001e43fceb604f62c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:route-table/rtb-0d81851cb445da394",
            "id": "rtb-0d81851cb445da394",
            "owner_id": "780067648615",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a82e10ed7246dc69",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route1"
            },
            "tags_all": {
              "Name": "route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-001e43fceb604f62c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:route-table/rtb-0f077a7013be04d6a",
            "id": "rtb-0f077a7013be04d6a",
            "owner_id": "780067648615",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a82e10ed7246dc69",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route2"
            },
            "tags_all": {
              "Name": "route2"
            },
            "timeouts": null,
            "vpc_id": "vpc-001e43fceb604f62c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:route-table/rtb-024a530b1f4949301",
            "id": "rtb-024a530b1f4949301",
            "owner_id": "780067648615",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a82e10ed7246dc69",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routemanually"
            },
            "tags_all": {
              "Name": "routemanually"
            },
            "timeouts": null,
            "vpc_id": "vpc-001e43fceb604f62c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0057350e18ba662e9",
            "route_table_id": "rtb-030fc5d649f9239ed",
            "subnet_id": "subnet-08fcc8b383f85baf3"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.pub1",
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e404a62d2c327e2c",
            "route_table_id": "rtb-0d81851cb445da394",
            "subnet_id": "subnet-033e37347fcceb48f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.pub1",
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bb21bc319b69c80",
            "route_table_id": "rtb-0f077a7013be04d6a",
            "subnet_id": "subnet-0243ab7e1fcbed796"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.pub1",
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "js-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:security-group/sg-031fe9f0d898399f8",
            "description": "Example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031fe9f0d898399f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "js-sg",
            "name_prefix": "",
            "owner_id": "780067648615",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001e43fceb604f62c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:subnet/subnet-08fcc8b383f85baf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fcc8b383f85baf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780067648615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-subnet0"
            },
            "tags_all": {
              "Name": "Pub-subnet0"
            },
            "vpc_id": "vpc-001e43fceb604f62c"
          },
          "dependencies": [
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:subnet/subnet-033e37347fcceb48f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033e37347fcceb48f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780067648615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-subnet1"
            },
            "tags_all": {
              "Name": "Pub-subnet1"
            },
            "vpc_id": "vpc-001e43fceb604f62c"
          },
          "dependencies": [
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:subnet/subnet-0243ab7e1fcbed796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0243ab7e1fcbed796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780067648615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-subnet2"
            },
            "tags_all": {
              "Name": "Pub-subnet2"
            },
            "vpc_id": "vpc-001e43fceb604f62c"
          },
          "dependencies": [
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jeks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780067648615:vpc/vpc-001e43fceb604f62c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03965ec408b863731",
            "default_route_table_id": "rtb-04300e6cd21f22b25",
            "default_security_group_id": "sg-0c7ae88b6c5bdd7e5",
            "dhcp_options_id": "dopt-085074cfec72bad33",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001e43fceb604f62c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04300e6cd21f22b25",
            "owner_id": "780067648615",
            "tags": {
              "Name": "Jaks-vpc"
            },
            "tags_all": {
              "Name": "Jaks-vpc"
            }
          }
        }
      ]
    }
  ]
}